--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
     "build": "parcel build"
   },
   "devDependencies": {
-    "parcel": "^2.13.3"
+    "@tailwindcss/postcss": "^4.0.14",
+    "parcel": "^2.13.3",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.14"
+  },
+  "dependencies": {
+    "leaflet": "^1.9.4"
   }
 }
